Fix words in docs

--- a/docs/lessons/greetings-salutations.mdx
+++ b/docs/lessons/greetings-salutations.mdx
@@ -22,8 +22,8 @@ allows you to refer to the action of the verb as a noun.
 
 <HisyeoTabs>
     <p>.&emsp;<em></em>Playing on computers is awesome.</p>
-    <p>lı küzoü ü xe kelo fio öni tüek.&emsp;<em>It is awesome to play on computers.</em></p>
-    <p>noyo süko xe kelo fio öni tüek.&emsp;<em>I like playing on computers.</em></p>
+    <p>lı küzoü ü xe kelo tö öni tüek.&emsp;<em>It is awesome to play on computers.</em></p>
+    <p>noyo süko xe kelo tö öni tüek.&emsp;<em>I like playing on computers.</em></p>
 </HisyeoTabs>
 
 Starting the first sentence with a subordinate clause requires that you use a
