--- a/docs/reference/word_types/determiners.mdx
+++ b/docs/reference/word_types/determiners.mdx
@@ -175,7 +175,7 @@ exact numerical quantity the noun actually is.
   <p><strong>total/all:</strong>&emsp;möi sütüö noyo süko kontol doi osyen.&emsp;<em>All my friends like classical music</em></p>
   <p><strong>highest/most:</strong>&emsp;öfo lı numüno yë eswen sonkon en möi.&emsp;<em>This is the most important example.</em></p>
   <p><strong>high/many:</strong>&emsp;lı ëto toliko bësu yë xe cöüfon.&emsp;<em>"There are many different ways to cook a meal."</em></p>
-  <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë xe tüu öfo, en fos noyo köi tüek fio kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
+  <p><strong>higher/more:</strong>&emsp;lı eswen toliko yë xe tüu öfo, en fos noyo köi tüek tö kut.&emsp;<em>"There are more ways to xe this than I can count."</em></p>
   <p><strong>lower/fewer:</strong>&emsp;lı mënüs umo hoi öfo bı ibüdü.&emsp;<em>"There are less people here now."</em></p>
   <p><strong>low/some:</strong>&emsp;yoüti umo süko kon mühoyon.&emsp;<em>"Some people like camping."</em></p>
   <p><strong>lowest/least:</strong>&emsp;noyo bı tölki yünyoü zötëstö oxon xe cıfü mënüs cıno yë nıwos en möi.&emsp;<em>I can only afford to pay the least of the bills.</em></p>
