--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -81,7 +81,7 @@ that is something other than the marked noun phrase.
 
 ### Instrument or Manner
 
-The <HisyeoWord is='fio'/> particle precedes this noun phrase.
+The <HisyeoWord is='tö'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent some entity that was used to carry out
 the action. It can also represent the way or manner with which the action was
@@ -175,7 +175,7 @@ differentiation and causation).
   <p>küu dënëmëk xe dëko nı sün bındü niün yë dëko.&emsp;<em>Try to see it from his point of view.</em></p>
   <p>sün mulö yë nıwos küon ü nimü bı yoüti köi dëko bümi yë cënbö möi.&emsp;<em>From the top of the lighthouse you can just see the mainland.</em></p>
   <p>düi dus sün son dus kut di önsu.&emsp;<em>20 from 31 leaves 11.</em></p>
-  <p>libü gelmıs yë foko mefüs lono bı möcibo bön xe lı mefüs sün lozö yë binton lono.&emsp;<em>A parasol protects from the sun's rays.</em></p>
+  <p>libü gelmıs yë foko mefüs lono bı möcibo kös xe lı mefüs sün lozö yë binton lono.&emsp;<em>A parasol protects from the sun's rays.</em></p>
   <p>köson nı sün ülögun nulun sëlbö sofin.&emsp;<em>It's made from pure gold.</em></p>
 </HisyeoTabs>
 
@@ -229,7 +229,7 @@ entry](https://en.wiktionary.org/wiki/for).
 <HisyeoTabs>
   <p>noi möi umo xe oxon bësnëhot, küu lı ëo lö bı mulö ölë züngö nimü.&emsp;<em>All those for the motion, raise your hands.</em></p>
   <p>zık oxon mozün bukü.&emsp;<em>Who's for ice-cream?</em></p>
-  <p>noyo oxon xe lı lö fio oütö kiskö.&emsp;<em>I'm for going by train.</em></p>
+  <p>noyo oxon xe lı lö tö oütö kiskö.&emsp;<em>I'm for going by train.</em></p>
   <p>dus göcidon si oxon ün son dën.&emsp;<em>Ten voted for, and three against. (with implied object)</em></p>
 </HisyeoTabs>
 7. ⛔ Because of. 
@@ -299,12 +299,12 @@ entry](https://en.wiktionary.org/wiki/for).
 19. ✅ Indicating something desired or anticipated. 
 <HisyeoTabs>
   <p>oxon nıxin yë timiok pipök.&emsp;<em>O for the wings of a dove.</em></p>
-  <p>oxon nıxin fos lı lö fio nu.&emsp;<em>Ah! for wings to soar …</em></p>
+  <p>oxon nıxin fos lı lö tö nu.&emsp;<em>Ah! for wings to soar …</em></p>
   <p>hön ibüdü oxon cöüfon yë cëo kut ze.&emsp;<em>And now for a slap-up meal!</em></p>
 </HisyeoTabs>
 20. ⛔ (in expressions such as 'for a start') Introducing the first item(s) in a potential sequence .
 <HisyeoTabs>
-  <p>tüu kon dodë fio woyü in besol nu. hön kut fın ü noyo köi dodë yök löicök.&emsp;<em>Go scuba diving? For one thing, I can't even swim.</em></p>
+  <p>tüu kon dodë tö woyü in besol nu. hön kut fın ü noyo köi dodë yök löicök.&emsp;<em>Go scuba diving? For one thing, I can't even swim.</em></p>
   <p>hön dizel nü yünyoü yök ozüul yön.&emsp;<em>For another, we don't have any equipment.</em></p>
 </HisyeoTabs>
 21. ✅ (with names, chiefly US) In honor of; after.
@@ -415,7 +415,7 @@ verbs that indicates an opposing agent for verbs that indicate an action that is
 English, this represents some of the senses of the word "against".
 
 <HisyeoTabs>
-  <p>nı lı tüu kutın hön xe oütö bı ximu fio woyü dën bono woyü.&emsp;<em>"It is hard work to sail against the wind."</em></p>
+  <p>nı lı tüu kutın hön xe oütö bı ximu tö woyü dën bono woyü.&emsp;<em>"It is hard work to sail against the wind."</em></p>
   <p>nimü dën fölni yë göcidon ko.&emsp;<em>"Are you against freedom of choice?"</em></p>
 </HisyeoTabs>
 
@@ -455,7 +455,7 @@ of the senses of the word "for".
 <HisyeoTabs>
   <p>noyo köi dëko lon yoüti öni kut cënbö yë mönbılı.&emsp;<em>"I can see for kilometres"</em></p>
   <p>nimü lı gö lon üsën zık.&emsp;<em>"How old are you?"</em></p>
-  <p>niün köntësto fio köto lon yoüti lono hön döcui.&emsp;<em>They argued for days over a toy.</em></p>
+  <p>niün köntësto tö köto lon yoüti lono hön döcui.&emsp;<em>They argued for days over a toy.</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -545,7 +545,7 @@ preposition phrase (as long as it's a content word, other prepositions can cause
 argument to be skipped).
 
 <HisyeoTabs>
-  <p>wölık nëlö bön küyö&emsp;<em>"Black clouds cause sadness."</em></p>
+  <p>wölık nëlö kös küyö&emsp;<em>"Black clouds cause sadness."</em></p>
 </HisyeoTabs>
 
 
