--- a/docs/works/shannon-test-sentences.mdx
+++ b/docs/works/shannon-test-sentences.mdx
@@ -78,7 +78,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>timiok hünsık bı sodolun kontol hoi hüzon ko.&emsp;<em>Does the robin sing in the rain?</em></p>
 <p>nimü lı lö ofek nü müt sikin kon kontol.&emsp;<em>Are you going with us to the concert?</em></p>
 <p>nimü hoi ozüul woküt tulutı biömu nomü hüzon ko.&emsp;<em>Have you ever travelled in the jungle?</em></p>
-<p>nü oütö fio woyü müt cën yë xüto onö lon yoüti mönbılı xokön.&emsp;<em>We sailed down the river for several miles.</em></p>
+<p>nü oütö tö woyü müt cën yë xüto onö lon yoüti mönbılı xokön.&emsp;<em>We sailed down the river for several miles.</em></p>
 <p>xokön umo fısun kon wëtodü.&emsp;<em>Everybody knows about hunting.</em></p>
 <p>hoi lono küon xe cıhöü woküt fos binton lono socok xe di fëlkonö eswen, ü nü socok si müt tohılök bümi.&emsp;<em>On a Sunny morning after the solstice we started for the mountains.</em></p>
 <p>umo Ton lı si liülë nënko cülci yë fonolon.&emsp;<em>Tom laughed at the monkey's tricks.</em></p>
@@ -89,7 +89,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>öni doknü onö yë dıbo yë hülü in zohit et onö lı si zigil müt sokofü.&emsp;<em>The cover of the basket fell to the floor.</em></p>
 <p>umo moskül xonluk kut onö yë gito onö niltügu si hoi zınkon kon gik.&emsp;<em>The first boy in the line stopped at the entrance.</em></p>
 <p>hoi solwöc yë töxütsı bümi hoi limien yë nıwos cüti nıwos si ü umo wohi nokdo colot.&emsp;<em>On the top of the hill in a little hut lived a wise old woman.</em></p>
-<p>hoi woküt yë kon nıwos yë fenüo londuluk onö ü nü bı ëto lı lö fio wowoë hoi comen zonwul onö.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
+<p>hoi woküt yë kon nıwos yë fenüo londuluk onö ü nü bı ëto lı lö tö wowoë hoi comen zonwul onö.&emsp;<em>During our residence in the country we often walked in the pastures.</em></p>
 <p>hoi woküt zık ü monodo sün sınsi cënbö ke lı gik.&emsp;<em>When will your guests from the city arrive?</em></p>
 <p>hoi fëlkonö yë göyu onö yë xüto onö ü titon nı lı si ınfultin bı cies müt kılukü.&emsp;<em>Near the mouth of the river, its course turns sharply towards the East.</em></p>
 <p>gıtno düi tohılök bümi ıwotë lı tıgoyo ü fenüo süböl yë bümi sël.&emsp;<em>Between the two lofty mountains lay a fertile valley.</em></p>
@@ -110,7 +110,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>noyo nocido si libü bolce nulun noyo.&emsp;<em>I have lost my blanket.</em></p>
 <p>timiok yë wıkse cınöbu köson si nıwos niün hoi nomü onö yë küöxı hünsık süwit.&emsp;<em>A robin has built his nest in the apple tree.</em></p>
 <p>hoi mutyu lono ü nü mokon si cöüfon nü hoi söbo titon.&emsp;<em>At noon we ate our lunch by the roadside.</em></p>
-<p>umo Zönsu bön si öni wëtü oxon umo moskül xonluk cüti niün.&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
+<p>umo Zönsu kös si öni wëtü oxon umo moskül xonluk cüti niün.&emsp;<em>Mr. Jones made a knife for his little boy.</em></p>
 <p>ëtsö yë öitun niün lı xoinbo yë xowosë ëto.&emsp;<em>Their voices sound very happy.</em></p>
 <p>lono öfo lı lono düsul ko.&emsp;<em>Is today Monday?</em></p>
 <p>woloko onö lı si zigil sün nomü ko.&emsp;<em>Have all the leaves fallen from the tree?</em></p>
@@ -132,11 +132,11 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>nimü ün noyo ke lı lö ofek xokön dizel.&emsp;<em>You and I will go together.</em></p>
 <p>niün lı ëo but ölë möi zınkon ün kümun oboki.&emsp;<em>They opened all the doors and windows.</em></p>
 <p>niün lı cüti lëkın len.&emsp;<em>He is small, but strong.</em></p>
-<p>müt nomü öfo fio hiskünco İngulıc somo nomü Ök yodo nomü Mëpul ko.&emsp;<em>Is this tree an oak or a maple?</em></p>
+<p>müt nomü öfo tö hiskünco İngulıc somo nomü Ök yodo nomü Mëpul ko.&emsp;<em>Is this tree an oak or a maple?</em></p>
 <p>okoxu lı xoinbo in dëko mıslı zöi yodo düsul ko.&emsp;<em>Does the sky look blue or gray?</em></p>
 <p>küu lı lö ofek motüo moskül yodo motüo wohi.&emsp;<em>Come with your father or mother.</em></p>
 <p>noyo lı bicüon lëkın lı xowosë ëto.&emsp;<em>I am tired, but very happy.</em></p>
-<p>niün kelo kontol fio yön in kontol yë mököfo in üslëk et küzoü niün.&emsp;<em>He played a tune on his wonderful flute.</em></p>
+<p>niün kelo kontol tö yön in kontol yë mököfo in üslëk et küzoü niün.&emsp;<em>He played a tune on his wonderful flute.</em></p>
 <p>müt könyëc yë wuto tukwos ü lono di ëto gosil eswen.&emsp;<em>Toward the end of August the days grow much shorter.</em></p>
 <p>zomo cënbö yë umo güexo tulutı töxütsı bümi onö ün comen onö.&emsp;<em>A company of soldiers marched over the hill and across the meadow.</em></p>
 <p>yogö kut yë kiso lı foko sunyotni ëto.&emsp;<em>The first part of the story is very interesting.</em></p>
@@ -174,7 +174,7 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>küu lı fiki noi umo xonluk.&emsp;<em>Hurry, children.</em></p>
 <p>noi umo wohi xëntil ü noyo ke fütsün hükun nimü.&emsp;<em>Madam, I will obey your command.</em></p>
 <p>hoi öfo xe lı sël yë nomü öfo, ü niün müt monodo niün lı cüdo si cöüfon yë xön ëto.&emsp;<em>Here under this tree they gave their guests a splendid feast.</em></p>
-<p>hön yogö üsën cunyü ü noyo di wili hoi bıtün öntön fio küon füus sëlbö.&emsp;<em>In winter I get up at night, and dress by yellow candlelight.</em></p>
+<p>hön yogö üsën cunyü ü noyo di wili hoi bıtün öntön tö küon füus sëlbö.&emsp;<em>In winter I get up at night, and dress by yellow candlelight.</em></p>
 <p>küu köto yogö fëlcin yë kiso ulyö bı dizel.&emsp;<em>Tell the last part of that story again.</em></p>
 <p>küu lı fiki yodo ü nimü ke lı otıkon müun.&emsp;<em>Be quick or you will be too late.</em></p>
 <p>nimü ke lı lö ofek nü ko yodo motsı hoi öfo ko.&emsp;<em>Will you go with us or wait here?</em></p>
@@ -185,13 +185,13 @@ import HisyeoTooltip from '@site/src/components/HisyeoTooltip'
 <p>küu lı xowosë hön xünyu fın lëkın hön xön möi nimü.&emsp;<em>Be satisfied with nothing but your best.</em></p>
 <p>nü goniso niün mıslı sütüö cöünton nü.&emsp;<em>We consider them our faithful friends.</em></p>
 <p>nü ölë boxö öfo ke lı ëo nıwos nü.&emsp;<em>We will make this place our home.</em></p>
-<p>cüi nomü onö ölë nıwos niün lı ëo tüt ün lohot fio födoloc nulun ün woloko.&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
-<p>umo wohi cüti köson öntön yë döcui umo fio cızi niün.&emsp;<em>The little girl made the doll's dress herself.</em></p>
+<p>cüi nomü onö ölë nıwos niün lı ëo tüt ün lohot tö födoloc nulun ün woloko.&emsp;<em>The squirrels make their nests warm and snug with soft moss and leaves.</em></p>
+<p>umo wohi cüti köson öntön yë döcui umo tö cızi niün.&emsp;<em>The little girl made the doll's dress herself.</em></p>
 <p>noyo lı ëo tönkö ölë cızi noyo.&emsp;<em>I hurt myself.</em></p>
 <p>hoi öhël niün köto müt cızi niün.&emsp;<em>She was talking to herself.</em></p>
 <p>niün möniso si cızi niün xe köi lı oksiös yë imon.&emsp;<em>He proved himself trustworthy.</em></p>
 <p>nü köi dëko cızi nü hoi ximu.&emsp;<em>We could see ourselves in the water.</em></p>
-<p>küu tüu nı fio cızi nimü.&emsp;<em>Do it yourself.</em></p>
+<p>küu tüu nı tö cızi nimü.&emsp;<em>Do it yourself.</em></p>
 <p>noyo oncëmon xulmındo yë noyo.&emsp;<em>I feel ashamed of myself.</em></p>
 <p>küu sıtyo hoi öfo ofek cızi nimü tölki.&emsp;<em>Sit here by yourself.</em></p>
 <p>ü öntön yë mënyüu wohi cüti yë hondon kon hükun lı fos müt nı zohit si inboli xe lı inboli centık yë küöcyo.&emsp;<em>The dress of the little princess was embroidered with roses, the national flower of the Country.</em></p>
