Add more to nouns doc

--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -19,14 +19,16 @@ quantifiers and modifiers.
 
 ### Causer / Voluntary Subject
 
-The <HisyeoWord is='ü'/> particle precedes this noun phrase.
+The <HisyeoWord is='ü'/> particle precedes this noun phrase. If this is the
+first noun phrase of a sentence, the particle can be omitted.
 
-During causative sentences, a NP with this role represents the *causer*.
-Otherwise, an NP with this role will be the **agent** or **experiencer** of the
-action. The nature of this role is that the marked noun phrase is making the
-choice to commit the act of the predicate of their own free will. 
+During causative sentences, a NP with this role represents the *causer*. During
+non-causative sentences, a NP with this role will be the **agent** or
+**experiencer** of the action or state. Additionally during non-causative
+sentences, the marked noun phrase is making the choice to commit the act or
+experience the state of the predicate of their own free will. 
 
-When used with the negatitive particle <HisyeoWord is='yök'/> it means that the
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the subject of the committed
 act of the predicate or that the act itself was committed but by something other
 than the marked noun phrase.
@@ -36,20 +38,21 @@ than the marked noun phrase.
 The <HisyeoWord is='ölë'/> particle precedes this noun phrase.
 
 During causative sentences, a NP with this role will represent the *causee*.
-Otherwise, an NP with this role will be the agent or experiencer of the action.
-The nature of this role is that the marked noun phrase is **not** making the
-choice to commit the act of their own free will. Either they are bound/forced to
-xe so or they xe not have the wherewithal to make a conscious choice on the
-matter and are acting out of some basic instinst.
+During non-causative sentences, an NP with this role will be the agent or
+experiencer of the action. Additionally during non-causative sentences, the
+marked noun phrase is **not** making the choice to commit the act of their own
+free will. Either they are bound/forced to do so or they do not have the
+wherewithal to make a conscious choice on the matter and are acting out of some
+basic instinst.
 
-When used with the negatitive particle <HisyeoWord is='yök'/> it has the same
-semantic interpretation as the voluntary subject particle.
+When used with the negatitive particle <HisyeoWord is='yök'/> it has the
+equivalent semantic interpretation as the voluntary subject particle <HisyeoWord is='ü'/>.
 
 ### Patient, Theme, Stimulus (Direct Object)
 
-No particle precedes this noun phrase, instead it exists immediately following
-the verb that is being used. Verbs act like prepositions when they are preceded
-by verb markers or no marker at all.
+Any one of the verb words precedes this noun phrase. Between the verb and the
+noun phrase can exist several verb modifier particles. See [Verbs](./verbs.mdx)
+for more details.
 
 The role of this object is for the special thematic argument to transitive
 verbs. The argument (the direct object) can be broken down into sub-types: a
@@ -59,7 +62,10 @@ preposition particle to introduce their direct object).
 
 :::caution Base Verbs Without This Particle
 
-Not using this particle can have an impact on how base verb sentences are
+You can provide a verb prepositionally without also providing a direct object
+NP. Simply start another preposition, use a connector to create a compound
+sentence, use a comma to end a clause or use a period to end a sentence. Not
+using this particle can have an impact on how base verb sentences are
 interpreted. Without providing a direct object, a base verb is interpreted as
 being *intransitive* or in an unthematic and generic manner (since no theme is
 being provided). That being said, sometimes it's easiest to just think of an
