--- a/docs/reference/word_types/nouns.mdx
+++ b/docs/reference/word_types/nouns.mdx
@@ -85,14 +85,13 @@ marked noun phrase is either excluded from being the argument of the committed
 act of the predicate or that the act itself was committed but with an object
 that is something other than the marked noun phrase.
 
-### Instrument or Manner
+### Manner or Material
 
-The <HisyeoWord is='tö'/> particle precedes this noun phrase.
+The <HisyeoWord is='bı'/> particle precedes this noun phrase.
 
-This role is used for NPs that represent some entity that was used to carry out
-the action. It can also represent the way or manner with which the action was
-carried out. In English, this represents some of the senses of the words "with",
-"using", and "via".
+This role is used for NPs that represent the manner or material of the
+predicate. In English, this is represented by the use of words with the "-ly"
+suffix (adverbs) or some senses of the words "by" and "with".
 
 :::info Thematic Relations
 
@@ -109,9 +108,23 @@ language to have **free constituent ordering**.
 :::
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
-marked noun phrase is either excluded from being the manner of instrument of the
+marked noun phrase is either excluded from being the manner or material of the
 committed act of the predicate or that the act itself was committed but in a
-manner or with an object that is something other than the marked noun phrase. In
+manner that is something other than the marked noun phrase. In English, this
+represents some of the senses of the word "without".
+
+### Instrument or Means
+
+The <HisyeoWord is='tö'/> particle precedes this noun phrase.
+
+This role is used for NPs that represent some entity that was used to carry out
+the action. In English, this represents some of the senses of the words "with",
+"using", "by", and "via".
+
+When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
+marked noun phrase is either excluded from being the means or instrument of the
+committed act of the predicate or that the act itself was committed but by means
+or with an object that is something other than the marked noun phrase. In
 English, this represents some of the senses of the word "without".
 
 ### Location or Time
@@ -122,8 +135,9 @@ This role is used for NPs that represent where or when the action occurs. In
 English, this represents some of the senses of the words "in", "at", and "on".
 
 The counterpart of this particle is <HisyeoWord is='lon'/> for distance and
-duration. Unlike that particle, when you provide an amount of time to <HisyeoWord is='hoi'/> it
-means the length of time that it took to achieve the task specified in the rest of the predicate.
+duration. Unlike the <HisyeoWord is='lon'/> particle, when you provide an amount
+of time to <HisyeoWord is='hoi'/> it means the length of time that it took to
+achieve the task specified in the rest of the predicate.
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the location or time of the
@@ -136,20 +150,20 @@ The <HisyeoWord is='müt'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent where the action is directed towards.
 In English, this represents some of the senses of the words "to", "into", and
-"towards". Any time you might need an **indrect object** or *recipient, you can
-use this preposition to describe that constituent.
+"towards". Any time you might need an **indrect object** or **recipient**, you
+can use this preposition to describe that constituent.
 
 :::info Reciprocity
 
-When you use this preposition with an NP of:
+When you use this preposition with this noun phrase:
 
 <HisyeoTabs>
   <p>xokön dizel</p>
 </HisyeoTabs>
 
-it means that the predicate is a reciprocal action which means that it happened
-between the subjects instead of the subjects directing that action towards some
-other referred entity.
+it means that the predicate is a *reciprocal* action which means that it
+happened between the subjects instead of the subjects directing that action
+towards some other referred entity.
 
 :::
 
@@ -201,9 +215,10 @@ word "for".
 :::info The many faces of the English "for"
 
 There are many varying uses of the English word "for" and they don't all line up
-under <HisyeoWord is='oxon'/> so I'd like to take a moment to run through most of
-the interpretations that are in the [wiktionary
-entry](https://en.wiktionary.org/wiki/for).
+under <HisyeoWord is='oxon'/> so we've included an in-depth walkthrough of most
+of the interpretations that are in the [wiktionary
+entry](https://en.wiktionary.org/wiki/for). The translations represent the
+proper way to formulate the desired semantic meaning.
 
 1. ⛔ Towards; in the direction of. 
 <HisyeoTabs>
@@ -282,7 +297,7 @@ entry](https://en.wiktionary.org/wiki/for).
   <p>noyo belëxu oxon mülü xe hoi könyëc küngiyo yë lono cınöbu.&emsp;<em>I am aiming for completion by the end of business Thursday.</em></p>
   <p>niün bëüdo oxon cëo yë mulö ëto.&emsp;<em>He's going for his doctorate.</em></p>
   <p>nimü fölun xe lı lö oxon iskö ülzo ko.&emsp;<em>xe you want to go for coffee?</em></p>
-  <p>umo xe nıwos hoi möi boxö yë küöcyo Elovo, diyondë si umo Delvi oxon zuwobü.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
+  <p>umo xe nıwos hoi möi boxö yë küöcyo Elofo, diyondë si umo Delfi oxon zuwobü.&emsp;<em>People all over Greece looked to Delphi for answers.</em></p>
   <p>nimü köi lı lö müt gufuyo oxon yoüti hüwu ko.&emsp;<em>Can you go to the store for some eggs?</em></p>
   <p>noyo wëko muni bı söbo oxon oütö.&emsp;<em>I'm saving up for a car.</em></p>
   <p>küu motsı yök oxon zuwobü.&emsp;<em>Don't wait for an answer.</em></p>
@@ -421,7 +436,7 @@ verbs that indicates an opposing agent for verbs that indicate an action that is
 English, this represents some of the senses of the word "against".
 
 <HisyeoTabs>
-  <p>nı lı tüu kutın hön xe oütö bı ximu tö woyü dën bono woyü.&emsp;<em>"It is hard work to sail against the wind."</em></p>
+  <p>nı lı tüu mëdüson hön xe oütö bı ximu tö woyü dën bono woyü.&emsp;<em>"It is hard work to sail against the wind."</em></p>
   <p>nimü dën fölni yë göcidon ko.&emsp;<em>"Are you against freedom of choice?"</em></p>
 </HisyeoTabs>
 
@@ -454,15 +469,56 @@ proof or a source that is something other than the marked noun phrase.
 The <HisyeoWord is='lon'/> particle precedes this noun phrase.
 
 This role is used for NPs that represent the time or space that the action
-occurs within. This role is related to the location/time role but it represents
-finite physical space or actual time periods. In English, this represents some
-of the senses of the word "for".
+occurs within. This role is related to the location/time role but instead of
+describing a moment or point in time/space, this noun phrase represents a period
+or length of time/space. In English, this represents some of the
+senses of the word "for" or "until".
 
 <HisyeoTabs>
   <p>noyo köi dëko lon yoüti öni kut cënbö yë mönbılı.&emsp;<em>"I can see for kilometres"</em></p>
   <p>nimü lı gö lon üsën zık.&emsp;<em>"How old are you?"</em></p>
   <p>niün köntësto tö köto lon yoüti lono hön döcui.&emsp;<em>They argued for days over a toy.</em></p>
 </HisyeoTabs>
+
+:::info The differences between the distance/duration role and the location/time role
+
+These two roles might at first seem like a trivial distinction given that
+quantities already contextually indicate that you are referring to distance or
+duration. You can provide a point in time or space to this preposition and it
+will be treated like the act had some unknown start time and the end time was
+either specified by this noun phrase or is reached when the destination
+specified is reached.
+
+<HisyeoTabs>
+    <p>noyo lı lö müt gufuyo hoi suhot tukwos yë bıtün xobëk.&emsp;<em>"I was going to the market at 8 o'clock last night."</em></p>
+    <p>noyo lı lö müt gufuyo lon suhot tukwos hoi bıtün xobëk.&emsp;<em>"I was going to the market until 8 o'clock last night."</em></p>
+    <p>niün bı fiki lı lö müt gito könyëc lon xe dëko si gufuyo cüti yë iskö yë küöxı nomü müncü.&emsp;<em>"He was running to the finish line until he saw the lemonade stand."</em></p>
+    <p>niün bı fiki lı lö müt gito könyëc hoi xe dëko si gufuyo cüti yë iskö yë küöxı nomü müncü.&emsp;<em>"He was running to the finish line at the time he saw the lemonade stand."</em></p>
+</HisyeoTabs>
+
+To better understand why it's necessary to distinguish this from location/time,
+it might be useful to see the semantic relationship of four of the thematic
+roles:
+
+- The **source/origin** role represents a *true* source/origin, sometimes
+  contextually distant/ from the action or state.
+- The **location/time** role represents the source/origin of just the act or
+  state described in the sentence.
+- The **destination/recipient** role represents a true destination/recipient,
+  sometimes contextually distant/removed from the action or state.
+- The **distance/duration** role represents the destination/recipient of just
+  the act or state described in the sentence.
+  
+Using the term "recipient" loosely here, the only time an animate entity would
+be provided as a noun phrase to a **distance/duration** preposition would be if
+that entity related to a specific moment or location upon the path or duration
+of the action or state at which point it ceases.
+
+<HisyeoTabs>
+    <p>noyo hoi öhël tulutı tö oütö gisgül noyo müt fenüo Kolıfölnyo lon umo Sëlo.&emsp;<em>"I was riding my bike to California until Sarah."</em></p>
+</HisyeoTabs>
+
+:::
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
 marked noun phrase is either excluded from being the distance or duration of the
@@ -473,13 +529,20 @@ duration or distance that is something other than the marked noun phrase.
 
 The <HisyeoWord is='gıtno'/> particle precedes this noun phrase.
 
-This role is used for either a NP that represents the a time or physical entity
-that the action occurs between or a conjunction of two NPs that represent two
-boundaries in time or space that the action occurs between. In English, this
-represents some of the senses of the word "between".
+This role is used for a NP that represents either:
+- an entity that the action or state is in the *midst* of,
+- an entity that the action or state *was* in the midst of but is now on the other
+  side, or
+- a conjunction of two NPs that represent two boundaries in time or space that the
+  action occurs *between*.
+
+In English, this represents some senses of the word "between" or "through".
 
 <HisyeoTabs>
-  <p>köi mokon ü noyo cö wutun yë höfezi gemolen et xe gıtno biek.&emsp;<em>"I could eat a hamburger."</em></p>
+  <p>noyo köi mokon wutun höfezi xe gıtno biek wutun.&emsp;<em>"I could eat a hamburger."</em></p>
+  <p>nü küu tulutı gıtno tohılök pümi onö oxon xe bucono woküt.&emsp;<em>"We should go through the mountains to save time."</em></p>
+  <p>nimü köi dëko oütö onö gıtno kümun oboki zonübi onö ko.&emsp;<em>"Can you see the car through the south window?"</em></p>
+  <p>gıtno nimü ün noyo ü hiskünco in köson Hisyëö lı xön möi&emsp;<em>"Between you and me, Hisyëö is the best conlang."</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
@@ -500,6 +563,9 @@ it can also represent the English phrase "as if".
 <HisyeoTabs>
   <p>xoinbo dëko ü loı mıslı sıskın loı.&emsp;<em>"He looks like his brother."</em></p>
   <p>si tüu cö künhiun bis ü umo moskül nokdo mıslı xe ke zigil.&emsp;<em>"The old man stumbled, as if he were about to fall."</em></p>
+  <p>golfon onö fos noyo oncëmon nı cıhöü xe dëko non foko ösölë yë könyëc wëxön fëlcin mıslı yök ozüul fın fos noyo oncëmon si hoi öhël.&emsp;<em>The disgust I felt after watching last weekend's horror movie was unlike anything I had felt before.</em></p>
+  <p>umo Kıloüdio bı xünyu cokyen iskö fın cübü mıslı yök umo Fılıt fos poxö kon iskö cübü bı cokyen lı nıwos düi yë.&emsp;<em>Claudia hardly ever drinks beer or wine, unlike Phillip, for whom the bar is practically a second home.</em></p>
+  <p>xe lı müun, mıslı yök niün&emsp;<em>Being late is unlike him.</em></p>
 </HisyeoTabs>
 
 When used with the negatitive particle <HisyeoWord is='yök'/>, it means that the
